[workspace]
members = [
    "util",
    "schema",
    "model",
    "service",
    "app"
]

[dependencies]
failure="^0.1"
log = "0.4"
env_logger = "0.5"

chrono = { version = "0.4", features = ["serde"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
diesel = {version ="^1.3",features=["postgres","chrono"]}
r2d2 = "^0.8"
r2d2-diesel="^1.0"
futures = "0.1"
lazy_static="^1.0"
fina-util={version = "^0.1", path = "./util"}
cookie="0.11.0-dev"

[dev-dependencies]
postgres="^0.15"
reqwest="^0.8.6"