[package]
name = "fina-app"
version = "0.1.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]

[lib]
name = "fina_app_lib"
path = "src/lib.rs"

[[bin]]
name = "fina_app"
path = "src/main.rs"

[dependencies]
diesel = "^1.3"
fina-schema = {version="^0.1", path="../schema"}
fina-util={version = "^0.1", path = "../util"}
fina-model={version = "^0.1", path = "../model"}
fina-service={version = "^0.1", path = "../service"}
failure="^0.1"
futures="*"
log = "0.4"
env_logger="0.5"
serde = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
actix="^0.7"
actix-web={version = "^0.7"}
http="*"