cargo-features = ["edition"]

[package]
edition = "2018"
name = "fina-app"
version = "0.1.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]

[lib]
name = "fina_app_lib"
path = "src/lib.rs"

[[bin]]
name = "fina_app"
path = "src/main.rs"

[dependencies]
fina-util={version = "^0.1", path = "../util"}
fina-model={version = "^0.1", path = "../model"}
fina-service={version = "^0.1", path = "../service"}
failure={ version="^0.1", git="https://github.com/rust-lang-nursery/failure"}
log = "0.4"
env_logger = "0.5"
serde = "^1.0"
serde_json = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }

[dependencies.rocket_codegen]
version = "0.4.0-dev"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]

[dev-dependencies]
postgres="^0.15"
diesel="1.3.2"
reqwest="^0.8.6"
parking_lot = {version = "0.5", features = ["nightly"]}