cargo-features = ["edition"]

[package]
edition = "2018"
name = "fina-model"
version = "0.1.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]

[dependencies]
diesel = "^1.3"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
fina-util={version = "^0.1", path = "../util"}
failure={ version="^0.1", git="https://github.com/rust-lang-nursery/failure"}
log = "0.4"
serde = "^1.0"
serde_derive = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
