cargo-features = ["edition"]

[package]
edition = "2018"
name = "fina-service"
version = "0.1.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]

[dependencies]
diesel = "^1.3"
fina-util={version = "^0.1", path = "../util"}
fina-model={version = "^0.1", path = "../model"}
log = "0.4"
serde = "^1.0"
serde_derive = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
failure={ version="^0.1", git="https://github.com/rust-lang-nursery/failure"}
lettre = "0.8"
lettre_email = "0.8"
