[package]
name = "fina-util"
version = "0.1.0"
authors = ["Murali Mohan Rath <murali@mmrath.com>"]

[dependencies]
failure="^0.1"
log = "0.4"
diesel = {version ="^1.3",features=["postgres","chrono"]}
r2d2 = "^0.8"
r2d2-diesel="^1.0"
lazy_static="^1.0"
rand="0.5"
ring = "^0.13.0-alpha5"
argonautica= "^0.1"
uuid = "*"
